<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_serie_image"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:layout_margin="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_one"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/card_movie_serie_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/movie" >
        </ImageView>

        <TextView
            android:id="@+id/card_movie_serie_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/card_txt_movie_serie_title"
            android:textColor="@color/c_text"
            android:textSize="30dp"
            android:background="@color/bg_one_rgba"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:gravity="right"
            android:orientation="vertical">
            <TextView
                android:id="@+id/card_movie_serie_points"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:text="@string/card_txt_movie_serie_points"
                android:textColor="@color/c_text"
                android:background="@color/bg_green"
                android:textSize="15dp"
                android:gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>