<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_one"
    tools:context=".app.activity.MainActivity">
    <ImageView
        android:id="@+id/iv_view_image_home_1"
        android:layout_width="170dp"
        android:layout_height="255dp"
        android:layout_marginEnd="248dp"
        android:baselineAligned="false"
        android:src="@drawable/movie_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_4"
        android:layout_width="163dp"
        android:layout_height="242dp"
        android:layout_marginEnd="248dp"
        android:baselineAligned="false"
        android:src="@drawable/movie_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_7"
        android:layout_width="166dp"
        android:layout_height="255dp"
        android:layout_marginEnd="248dp"
        android:baselineAligned="false"
        android:src="@drawable/movie_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_3"
        android:layout_width="170dp"
        android:layout_height="255dp"
        android:layout_marginStart="258dp"
        android:baselineAligned="false"
        android:src="@drawable/serie_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_10"
        android:layout_width="166dp"
        android:layout_height="275dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="476dp"
        android:baselineAligned="false"
        android:src="@drawable/serie_03"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_6"
        android:layout_width="166dp"
        android:layout_height="275dp"
        android:layout_marginStart="244dp"
        android:baselineAligned="false"
        android:src="@drawable/movie_05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_2"
        android:layout_width="170dp"
        android:layout_height="255dp"
        android:layout_marginBottom="568dp"
        android:baselineAligned="false"
        android:src="@drawable/movie_06"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_5"
        android:layout_width="170dp"
        android:layout_height="255dp"
        android:baselineAligned="false"
        android:src="@drawable/serie_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_8"
        android:layout_width="170dp"
        android:layout_height="255dp"
        android:baselineAligned="false"
        android:src="@drawable/serie_04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/iv_view_image_home_9"
        android:layout_width="170dp"
        android:layout_height="236dp"
        android:layout_marginTop="572dp"
        android:baselineAligned="false"
        android:src="@drawable/serie_05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="439dp"
        android:layout_height="862dp"
        android:background="@color/bg_one_rgba"
        android:fontFamily="@font/primary"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/bg_four"
        android:text="@string/view_start_txt_login_in"
        android:fontFamily="@font/primary"
        android:textColor="@color/c_text"
        app:icon="@drawable/ic_icon_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="#00FFFFFF"
        android:text="@string/view_start_txt_sign_in"
        android:fontFamily="@font/primary"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_view_image_home_8"
        app:layout_constraintVertical_bias="1.0" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312"
        app:srcCompat="@drawable/letras_logo"
        android:contentDescription="@string/view_start_txt_image_description"/>
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="182dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/view_start_txt_image_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>