<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_user_scroll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/home_user"
        android:background="@color/bg_one"
        tools:context=".app.activity.user.HomeUserActivity">
        <RelativeLayout
            android:id="@+id/home_user_card_movie"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="93dp"
            android:background="@color/bg_two"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/home_user_card_movie_01"
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/movie_01"
                    android:contentDescription="@string/card_txt_image_description"/>
                <ImageView
                    android:id="@+id/home_user_card_movie_02"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/movie_02"
                    android:contentDescription="@string/card_txt_image_description"/>

                <ImageView
                    android:id="@+id/home_user_card_movie_03"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/movie_03"
                    android:contentDescription="@string/card_txt_image_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/home_user_card_movie_04"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/movie_04"
                    android:contentDescription="@string/card_txt_image_description"/>

                <ImageView
                    android:id="@+id/home_user_card_movie_05"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/movie_05"
                    android:contentDescription="@string/card_txt_image_description"/>

                <ImageView
                    android:id="@+id/home_user_card_movie_06"
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/movie_06"
                    android:contentDescription="@string/card_txt_image_description"/>
            </LinearLayout>
            <TextView
                android:id="@+id/home_user_card_movie_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/card_txt_movie_title"
                android:textColor="@color/c_text"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="@font/primary"
                android:background="@color/bg_one_rgba"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/home_user_card_serie"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="58dp"
            android:layout_marginBottom="63dp"
            android:background="@color/bg_two"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/home_user_card_serie_01"
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/serie_01"
                    android:contentDescription="@string/card_txt_image_description"/>

                <ImageView
                    android:id="@+id/home_user_card_serie_02"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/serie_02"
                    android:contentDescription="@string/card_txt_image_description"/>

                <ImageView
                    android:id="@+id/home_user_card_serie_03"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/serie_03"
                    android:contentDescription="@string/card_txt_image_description"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/home_user_card_serie_04"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/serie_04"
                    android:contentDescription="@string/card_txt_image_description"/>
                <ImageView
                    android:id="@+id/home_user_card_serie_05"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/serie_05"
                    android:contentDescription="@string/card_txt_image_description"/>
                <ImageView
                    android:id="@+id/home_user_card_serie_06"
                    android:layout_width="50dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:layout_gravity="fill"
                    app:srcCompat="@drawable/serie_06"
                    android:contentDescription="@string/card_txt_image_description"/>
            </LinearLayout>
            <TextView
                android:id="@+id/home_user_card_serie_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/card_txt_serie_title"
                android:textColor="@color/c_text"
                android:textSize="40sp"
                android:textStyle="bold"
                android:fontFamily="@font/primary"
                android:background="@color/bg_one_rgba"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>